# opencv-rust-example

./: README.md
concat_image/: Cargo.toml
concat_image/src/: main.rs
contours/: Cargo.toml
contours/src/: main.rs
face-detection/: Cargo.toml
face-detection/src/: main.rs
invisible-cloak/: Cargo.toml
invisible-cloak/src/: main.rs
license-plate-detection/: Cargo.toml
license-plate-detection/src/: main.rs
qrcode/: Cargo.toml
qrcode/src/: main.rs
qrcode_zbar/: Cargo.toml
qrcode_zbar/src/: main.rs
